name:               hqt
version:            0.0.3
license:            GPL-3
license-file:       LICENSE
author:             Waheed Kneeler <oneknlr@AT-gmail.com>
maintainer:         oneknlr@AT-gmail.com
copyright:          (c) 2013 Waheed Kneeler
bug-reports:        https://github.com/oqc/hqr/issues
homepage:           https://github.com/oqc/hqr
synopsis:           Haskell Quran Toolkit
description:        A library for dealing Quran texts, providing the following features:

                    * Basic types and utility functions for dealing with Quran texts.
                    * Parsers (for references and data formats[1]).
                    * More to come...

                    References:

                    1. Specifications of the Quran Data Formats: <https://github.com/oqc/qdf>

stability:          stable
category:           Data, Text
build-type:         Simple
cabal-version:      >=1.9
tested-with:        GHC>=7.4
extra-source-files: README.md

source-repository head
  type:             git
  location:         git://github.com/oqc/hqt.git

library
  exposed-modules:  Quran.Types, Quran.RefParser
  other-modules:    Quran.Internal.Types, Quran.Internal.RefParser
  build-depends:    base,
                    text,
                    attoparsec >= 0.10.4.0
  ghc-options:      -Wall
                    -O2

flag tests
  description:      Build the executable to run the specs (tests).
  default:          False

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          specs.hs
  -- hs-source-dirs:   .
  build-depends:    base,
                    hqt,
                    text,
                    attoparsec >= 0.10.4.0,
                    HUnit,
                    hspec >= 1.3
                    --QuickCheck
  ghc-options:      -Wall


--  Will only work when moving to ghc-7.6 and cabal-1.14.+
flag bench
  description:      Build the executable to run benchmarks.
  default:          False

benchmark bench
  type:             exitcode-stdio-1.0
  main-is:          bench.hs
  hs-source-dirs:   . bench
  build-depends:    base,
                    criterion,
                    random
  ghc-options:      -Wall
                    -O2

